--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trabajamos con ramas</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>Tercer commit</p>
-    <p>Cuarto commit</p>
-    <p>Quinto commit</p>
+    <p>prueba experimental</p>
+    <p>nuevo commit</p>
   </body>
 </html>
