sumé una línea en un span

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <p>prueba experimental</p>
     <p>nuevo commit</p>
+    <span>nuevo contenido adhasdkjhasdkj</span>
   </body>
 </html>
