--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <p>prueba experimental LE SUMO ALGO</p>
     <p>nuevo commit</p>
-    <span>nuevo contenido adhasdkjhasdkj</span>
+    <span>nuevo contenido</span>
   </body>
 </html>
