cree una nueva seccion

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p>prueba experimental LE SUMO ALGO</p>
     <p>nuevo commit</p>
     <span>nuevo contenido</span>
+
+    <section>Nuevo contenido desde una rama</section>
   </body>
 </html>
