--- a/index.html
+++ b/index.html
@@ -12,4 +12,10 @@
 
     <section>Nuevo contenido desde una rama</section>
   </body>
+
+  <style>
+    * {
+      background-color: red;
+    }
+  </style>
 </html>
